2012-07-09  Andreas Kupries  <andreask@activestate.com>

	* tree/m.c (tm_ATTR): Fixed non-static string array used in call
	  of Tcl_GetIndexFromObj(). Memory smash waiting to happen. Thanks
	  to Brian Griffin for alerting us all to the problem.

2012-06-22  Andreas Kupries  <andreask@activestate.com>

	* queue.man: [Bug 3537006] Fixed typos.

2012-01-08  Andreas Kupries  <andreask@activestate.com>

	* struct_tree.man: [Bug 3471182] Fixed typo.
	* struct_tree1.man:

2011-12-13  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.14 ========================
	* 

2011-09-17  Michael Schlenker <mic42@users.sourceforge.ner>
        
	* list.tcl: [Bug 3308051]: Fixed noncommutative equal check
	* list.test:

2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2010-10-26  Andreas Kupries  <andreask@activestate.com>

	* graphops.man: [Bug 3090738]: Fixed typo in command names.

2010-10-05  Andreas Kupries  <andreask@activestate.com>

	* list.tcl (::struct::list::Lshuffle): New command, shuffling a
	* list.test: list into random order. Bumped version to 1.8.
	* struct_list.man: Extended testsuite, updated documentation.
	* pkgIndex.tcl: Removed the backward compatibility implementation
	  of 'lset' from code and tests and bumped the runtime
	  requirements to Tcl 8.4.

2010-09-10  Andreas Kupries  <andreask@activestate.com>

	* queue_oo.tcl: Established minimum requirements for TclOO
	* stack_oo.tcl: to support the two classes. Bug 3062782 was
	  a very old TclOO (0.3) interfering in the test.

2010-09-09  Andreas Kupries  <andreask@activestate.com>

	* graph/tests/ops/adjmatrix.test: Converted to tcltest v2 for
	* graph/tests/ops/components.test: proper independence of the
	* graph/tests/ops/componentof.test: tests. Preparation for
	* graph/tests/ops/bipartite.test: the investigation of Bug
	* graph/tests/ops/kruskal.test: 3062782.